--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ datasets = "^2.6.0"
 omegaconf = "^2.2.3"
 rich = "^12.6.0"
 loguru = "^0.6.0"
+transformers = "^4.23.1"
+jsondiff = "^2.0.0"
+singledispatchmethod = "^1.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
