--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ loguru = "^0.6.0"
 transformers = "^4.23.1"
 jsondiff = "^2.0.0"
 singledispatchmethod = "^1.0"
+stackprinter = "^0.2.9"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
