--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "warp-pipes"
 version = "0.1.0"
-description = "Simple deterministic and multi-threaded pipelines."
+description = "Simple deterministic and multi-threaded pipelines for data preprocessing."
 authors = ["Valentin Liévin <valentin.lievin@gmail.com>"]
 
 [tool.poetry.dependencies]
