--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ transformers = "^4.23.1"
 jsondiff = "^2.0.0"
 singledispatchmethod = "^1.0"
 stackprinter = "^0.2.9"
+pytorch-lightning = "^1.7.7"
+tensorstore = "^0.1.27"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
