downgrade datasets (with_indices bug)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ authors = ["Valentin Liévin <valentin.lievin@gmail.com>"]
 python = "^3.8"
 numpy = "^1.23.4"
 torch = "^1.12.1"
-datasets = "^2.6.0"
+datasets = "2.5"
 omegaconf = "^2.2.3"
 rich = "^12.6.0"
 loguru = "^0.6.0"
