--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ pytorch-lightning = "^1.7.7"
 tensorstore = "^0.1.27"
 pydantic = "^1.10.2"
 hydra-core = "^1.2.0"
+faiss-cpu = "^1.7.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
