--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,8 +20,8 @@ pytorch-lightning = "^1.7.7"
 tensorstore = "^0.1.27"
 pydantic = "^1.10.2"
 hydra-core = "^1.2.0"
-faiss-cpu = "^1.7.2"
-elasticsearch = "^8.4.3"
+faiss-cpu = "1.6.5"
+elasticsearch = "7"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
