--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,8 @@ authors = ["Valentin Liévin <valentin.lievin@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 numpy = "^1.23.4"
-torch = "^1.12.1"
-datasets = "2.5"
+torch = "~1.12" # 1.13 throws error as it attempts to install `nvidia-cublas-cu11 `
+datasets = "~2.5"
 omegaconf = "^2.2.3"
 rich = "^12.6.0"
 loguru = "^0.6.0"
@@ -21,7 +21,8 @@ tensorstore = {version = "^0.1.27", allow-prereleases = true}
 pydantic = "^1.10.2"
 hydra-core = "^1.2.0"
 faiss-cpu = "1.6.5"
-elasticsearch = "7"
+elasticsearch = "~7"
+
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
