--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ authors = ["Valentin Liévin <valentin.lievin@gmail.com>"]
 python = "^3.8"
 numpy = "^1.23.4"
 torch = ">=1.12, !=1.13.0" # 1.13.0 throws error as it attempts to install `nvidia-cublas-cu11 `
-datasets = "~2.5"
+datasets = "^2.5"
 omegaconf = "^2.2.3"
 rich = "^12.6.0"
 loguru = "^0.6.0"
@@ -21,7 +21,7 @@ tensorstore = {version = "^0.1.27", allow-prereleases = true}
 pydantic = "^1.10.2"
 hydra-core = "^1.2.0"
 faiss-cpu = "^1.6.5"
-elasticsearch = "~7"
+elasticsearch = "^7"
 
 
 [tool.poetry.dev-dependencies]
