--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -27,9 +27,9 @@ jobs:
           sudo wget https://github.com/ritchie46/mdBook/releases/download/api-0.0.1/mdbook -O /usr/bin/mdbook2
           sudo chmod +x /usr/bin/mdbook2
 
-      - name: Run snippets
-        run: |
-          make run
+      # - name: Run snippets
+      #   run: |
+      #     make run
 
       - name: Deploy docs
         run: |
