permissions are required for docs to build and deploy

--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -2,7 +2,7 @@ name: WarpPipes Guides
 
 on:
   push:
-    branches: ["benjamin/bumps"]
+    branches: ["main"]
   workflow_dispatch:
 
 permissions:
