--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -15,19 +15,14 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  deploy:
+  build:
     name: docs
     runs-on: ubuntu-latest
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Setup Pages
         uses: actions/configure-pages@v3
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
         with:
           path: '.'
       - name: Setup Python
@@ -44,20 +39,27 @@ jobs:
           sudo wget https://github.com/ritchie46/mdBook/releases/download/api-0.0.1/mdbook -O /usr/bin/mdbook2
           sudo chmod +x /usr/bin/mdbook2
 
-      # - name: Run snippets
-      #   run: |
-      #     make run
-
       - name: Build docs
         run: |
           mkdir -p docs
           cd user_guide
-          mdbook build --dest-dir ../docs/user-guide .
+          mdbook build --dest-dir ../_site .
           cd ..
-          echo '<meta http-equiv=refresh content=0;url=/warppipes-book/user-guide/index.html>' > docs/index.html
+          #echo '<meta http-equiv=refresh content=0;url=/warppipes-book/user-guide/index.html>' > docs/index.html
           #ghp-import --no-jekyll docs
           #git push -qf https://${{ secrets.GITHUB_TOKEN }}@github.com/${GITHUB_REPOSITORY}.git gh-pages
-        
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v1
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
+
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
