--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@ cache/
 # Windows
 Thumbs.db
 
+# Torch Lightning
+lightning_logs/
+
 # Source for the following rules: https://raw.githubusercontent.com/github/gitignore/master/Python.gitignore
 # Byte-compiled / optimized / DLL files
 __pycache__/
