update md book structure

--- a/user_guide/books.toml
+++ b/user_guide/books.toml
@@ -1,5 +1,5 @@
 [book]
-authors = ["Valentin Liévin"]
+authors = ["Valentin Liévin", "Benjamin Starostka", "Andreas Geert Motzfeldt"]
 language = "en"
 multilingual = false
 src = "src"
