--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ include = [
 python = "^3.9"
 numpy = "^1.23.4"
 torch = "^2.0.0"
-pytorch-lightning = "1.8.3.post1"
+pytorch-lightning = "^2.0.0"
 datasets = "~2.5"
 omegaconf = "^2.2.3"
 rich = "^12.6.0"
